<resources>
    <string name="app_name">Budgetin</string>
    <string name="user_name">Nama: </string>
    <string name="profile">Profil</string>
    <string name="statistika">Statistik</string>
    <string name="catatan">Catatan</string>
    <string name="ket_pemasukkan">Total Pemasukan</string>
    <string name="ket_pengeluaran">Uang Tersisa</string>
    <string name="email">Email</string>
    <string name="password">Sandi</string>
    <string name="confirm_password">Konfirmasi Sandi</string>
    <string name="signed">signed</string>
    <string name="already_have_an_account_login">already have an account</string>
    <string name="login">Masuk</string>
    <string name="don_t_have_an_account_sign_in">don\'t have an account</string>
    <string name="login_text">Belum  punya akun? <u>Daftar</u></string>
    <string name="lupa_sandi">Lupa sandi?</string>
    <string name="atau">Atau</string>
    <string name="logout">Keluar</string>
    <string name="defaultWebClientId">762606644582-dt2npcmsio940ks7ht79nnnjhno8a60s.apps.googleusercontent.com</string>
    <string name="login_google">Sign in with Google</string>
    <string name="about">Tentang</string>
    <string name="Judul_fitur">Tentang Aplikasi</string>
    <string name="deskripsi">Aplikasi Budgetin berisi tentang laporan keuangan seperti catatan pengeluaran dan
        pemasukkan disertai dengan visualisasi yang sesuai dan terdapat juga riwayat keuangan. Selain itu, pada aplikasi ini tersedia money tracker
        sesuai catatan dari pengguna. </string>
    <string name="transaksi1">Pemasukan</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="describe">Deskripsi</string>
    <string name="jumlah">Jumlah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Beranda</string>
    <string name="tambah_data">Tambah data</string>
    <string name="lihat_saran">Refresh</string>
    <string name="add_device">Add Device</string>
    <string name="update_room">Update Room</string>
    <string name="no_data_available">Belum ada data</string>
    <string name="notif_title">Check-In Tel-U</string>
    <string name="notif_message">Check-in sekarang agar kesehatanmu terpantau! </string>
    <string name="notif_channel_id" translatable="false">reminder</string>
    <string name="notif_channel_name">Reminder</string>
    <string name="notif_channel_desc">Reminder check-in tiap beberapa jam. </string>
    <string name="news_channel_id" translatable="false">news</string>
    <string name="news_channel_name">Pengumuman</string>
    <string name="news_channel_desc">Pengumuman penting terkait kampus.</string>
    <string name="handle_notification_now">Notifikai Handler</string>
    <string name="email1">Email</string>
    <string name="reset">Reset</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email2">Email</string>
    <string name="daftar1">Daftar</string>
    <string name="sort_amp_filter"><![CDATA[Sort & Filter]]></string>
    <string name="sort_amp_filter_berdasarkan"><![CDATA[Sort & Filter berdasarkan :]]></string>
    <string name="pemasukan1">Pemasukan</string>
    <string name="pengeluaran1">Pengeluaran</string>
    <string name="tanggal_terdekat1">Tanggal Terdekat</string>
    <string name="tanggal_terjauh1">Tanggal Terjauh</string>
    <string name="transaksi">Transaksi</string>
    <string name="pengeluaran2">Pengeluaran</string>
    <string name="judul">Judul</string>
    <string name="kategori">Kategori</string>
    <string name="tanggal">tanggal</string>
    <string name="simpan">Simpan</string>
    <string name="email3">nama@gmail.com</string>
    <string name="nama_akun">Nama Akun</string>
    <string name="_1">1</string>
    <string name="bulan">Desember</string>
    <string name="bulanini">Bulan Ini</string>
    <string name="_2022">2022</string>
    <string name="uang_gedung_kampus">Uang Gedung Kampus</string>
    <string name="judul_transaksi">Judul Transaksi</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="_1_000_000">1.000.000</string>
    <string name="total_biaya">Total biaya</string>
    <string name="titik_dua">:</string>
    <string name="update">Update</string>
    <string name="rasio">Rasio</string>
    <string name="tabel">Tabel</string>
    <string name="_0_00">0.00</string>
    <string name="total">Total</string>
    <string name="select_date">Select date</string>
    <string name="f">F</string>
    <string name="total_keseluruhan">Total Keseluruhan</string>
    <string name="masuk">Masuk</string>
    <string name="edit_text">Edit Text</string>
    <string name="delete">Delete</string>

</resources>