<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/amountUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeRadioGroup"
            android:drawableStart="@drawable/ic_rupiah"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/jumlah"
            android:inputType="number"
            android:textColor="@color/black"
            android:maxLength= "10"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amountTIL"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount"
            android:drawableStart="@drawable/ic_baseline_title_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/judul"
            android:inputType="text"
            android:textColor="@color/black"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_format_list_bulleted_24"
            android:drawablePadding="8dp"
            android:hint="@string/kategori"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/dateUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoryTIL"
            android:drawableStart="@drawable/ic_baseline_calendar_month_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:text="@string/tanggal"
            android:textColor="#717171"
            android:textColorHint="@color/black"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/dateTIL"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="30dp"
        android:text="@string/update"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>